--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1705,5 +1705,21 @@
     "edit_promoter_save_button_title": "Save changes",
     "@edit_promoter_save_button_title": {
         "description": "Title of the save button on the edit promoter page"
+    },
+    "edit_promoter_inactive_landingpage_tooltip": "This landingpage is not active",
+    "@edit_promoter_inactive_landingpage_tooltip": {
+        "description": "Tooltip for inactive landingpages on the edit promoter page."
+    },
+    "edit_promoter_inactive_landingpage_tooltip_activate_action": "Activate landingpage",
+    "@edit_promoter_inactive_landingpage_tooltip_activate_action": {
+        "description": "Tooltip button for landingpage activation on the edit promoter page."
+    },
+    "promoter_overview_inactive_landingpage_tooltip_warning": "The promoter doesnt have active assinged landingpages",
+    "@promoter_overview_inactive_landingpage_tooltip_warning": {
+        "description": "Tooltip warning for inactive landingpages on the promoter overview."
+    },
+    "promoter_overview_inactive_landingpage_tooltip_warning_action": "Assign landingpage",
+    "@promoter_overview_inactive_landingpage_tooltip_warning_action": {
+        "description": "Tooltip warning button for inactive landingpages on the promoter overview."
     }
 }
