--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1754,9 +1754,19 @@
     "@landingpage_pagebuilder_footer_config_terms_and_conditions": {
         "description": "Collapsible Menu for terms and conditions configuration of the footer in the pagebuilder config menu"
     },
-    "edit_promoter_title": "Edit promoter",
+    "edit_promoter_title": "Edit {firstName} {lastName}",
     "@edit_promoter_title": {
-        "description": "Title of the edit promoter page"
+        "description": "Promoter name on the edit promoter page",
+        "placeholders": {
+            "firstName": {
+                "type": "String",
+                "example": "Max"
+            },
+            "lastName": {
+                "type": "String",
+                "example": "Mustermann"
+            }
+        }
     },
     "edit_promoter_subtitle": "Here you can adjust the landingpage allocation.",
     "@edit_promoter_subtitle": {
