--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1807,5 +1807,25 @@
     "landingpage_pagebuilder_video_player_config_youtube_link_placeholder": "Youtube link",
     "@landingpage_pagebuilder_video_player_config_youtube_link_placeholder": {
         "description": "Placeholder for the video player youtube link in the pagebuilder video player configuration."
+    },
+    "landingpage_creator_missing_companydata_error": "Company data not found",
+    "@landingpage_creator_missing_companydata_error": {
+        "description": "Error message when company data were not found for the creation of a default landingpage"
+    },
+    "landingpage_creator_default_page_info_text": "The data from your company profile is used to create the default landing page. This data will be displayed on the default landing page. If you change your company data, the data on your default page will also change.",
+    "@landingpage_creator_default_page_info_text": {
+        "description": "information text for the creation of a default landingpage in the landingpage creator"
+    },
+    "landingpage_overview_no_default_page_title": "Setup Landingpage",
+    "@landingpage_overview_no_default_page_title": {
+        "description": "Title for the page that is displayed if you have not yet created a default landing page."
+    },
+    "landingpage_overview_no_default_page_subtitle": "You haven't set up a landing page for your company yet. Here you can create a default landing page to start with. This landing page will be used if the link to another landing page expires. The landing page displays company information and a contact form.",
+    "@landingpage_overview_no_default_page_subtitle": {
+        "description": "Text for the page that is displayed if you have not yet created a default landing page."
+    },
+    "landingpage_overview_no_default_page_button_title": "Create default landingpage",
+    "@landingpage_overview_no_default_page_button_title": {
+        "description": "Button title for the page that is displayed if you have not yet created a default landing page."
     }
 }
