--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1887,5 +1887,13 @@
     "landingpage_overview_no_default_page_button_title": "Default Landingpage erstellen",
     "@landingpage_overview_no_default_page_button_title": {
         "description": "Button Titel für die Seite die angezeigt wird wenn man noch keine Default Landingpage erstellt hat."
+    },
+    "edit_promoter_no_data_title": "Keine Daten gefunden",
+    "@edit_promoter_no_data_title": {
+        "description": "Titel der View die erscheint wenn keine id für das editieren des Promoters gegeben ist."
+    },
+    "edit_promoter_no_data_subtitle": "Zu diesem Promoter wurden keine Daten gefunden",
+    "@edit_promoter_no_data_subtitle": {
+        "description": "Text der View die erscheint wenn keine id für das editieren des Promoters gegeben ist."
     }
 }
