--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1900,9 +1900,15 @@
     "@send_recommendation_alert_title": {
         "description": "Title of the alert to confirm whether you have sent a recommendation."
     },
-    "send_recommendation_alert_description": "Did you successfully send the recommendation? The link in the recommendation will only become valid once you confirm it here.",
+    "send_recommendation_alert_description": "Did you successfully send the recommendation to {receiver}? The link in the recommendation will only become valid once you confirm it here.",
     "@send_recommendation_alert_description": {
-        "description": "Description of the alert to confirm whether you have sent a recommendation."
+        "description": "Description of the alert to confirm whether you have sent a recommendation.",
+        "placeholders": {
+            "receiver": {
+                "type": "String",
+                "example": "Peter"
+            }
+        }
     },
     "send_recommendation_alert_yes_button": "Yes",
     "@send_recommendation_alert_yes_button": {
